[gd_scene load_steps=3 format=3 uid="uid://vnybjv76iw0f"]

[ext_resource type="Script" path="res://Scripts/UI/Lobby/Network/server_info_and_chat.gd" id="1_gxumh"]
[ext_resource type="Shortcut" uid="uid://fuvss5hfg4q2" path="res://Resources/Shortcuts/go_back.tres" id="2_x5rgd"]

[node name="ServerInfoAndChat" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(960, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_gxumh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 968.0
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonStop" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = ExtResource("2_x5rgd")
text = "Stop server"

[node name="ButtonKickAll" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kick all players"

[node name="Details" type="TabContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
current_tab = 1

[node name="Info" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Details"]
visible = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Log" type="Label" parent="MarginContainer/VBoxContainer/Details/Info"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
text = "server info asd as das das das das das das server info asd as das das dadsa as dass das das das server info asd as das das das das das das server info asd as das das das das das das server info asd as das das das das das das "
autowrap_mode = 3

[node name="Settings" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Details"]
layout_mode = 2

[node name="AllowSlotSteal" type="CheckButton" parent="MarginContainer/VBoxContainer/Details/Settings"]
layout_mode = 2
text = "Allow slot theft for all players"

[node name="AllowAllStart" type="CheckButton" parent="MarginContainer/VBoxContainer/Details/Settings"]
layout_mode = 2
text = "All players can start"

[node name="Security" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Details"]
visible = false
layout_mode = 2

[node name="TODO" type="Label" parent="MarginContainer/VBoxContainer/Details/Security"]
layout_mode = 2
text = "TODO"

[node name="Public" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Details"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Details/Public"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "These options are forgotten now -- use on your own responsibility xD"
autowrap_mode = 2
text_overrun_behavior = 4

[node name="ButtonsRow2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Details/Public"]
layout_mode = 2

[node name="ButtonPollIp" type="Button" parent="MarginContainer/VBoxContainer/Details/Public/ButtonsRow2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Poll external IP (http call)"

[node name="ExternalIpLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Details/Public/ButtonsRow2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ButtonsRow3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Details/Public"]
layout_mode = 2

[node name="LabelExternalPort" type="Label" parent="MarginContainer/VBoxContainer/Details/Public/ButtonsRow3"]
layout_mode = 2
size_flags_horizontal = 3
text = "External Port"

[node name="ExternalPortLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Details/Public/ButtonsRow3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ButtonsRow4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Details/Public"]
layout_mode = 2

[node name="ButtonPollIp" type="Label" parent="MarginContainer/VBoxContainer/Details/Public/ButtonsRow4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Go public"

[node name="IsPublicCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Details/Public/ButtonsRow4"]
layout_mode = 2
text = "IS A PUBLIC SERVER"

[node name="Chat" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Chat"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Log" type="Label" parent="MarginContainer/VBoxContainer/Chat/LogScroll"]
custom_minimum_size = Vector2(900, 280)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Zdzichu: siemanko zxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxczxczx c zxc"
autowrap_mode = 3

[node name="Writing" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Chat"]
layout_mode = 2

[node name="ChatMessage" type="LineEdit" parent="MarginContainer/VBoxContainer/Chat/Writing"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "type some beautiful words here..."
middle_mouse_paste_enabled = false
caret_blink = true

[node name="ButtonSend" type="Button" parent="MarginContainer/VBoxContainer/Chat/Writing"]
layout_mode = 2
text = "Send"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/ButtonStop" to="." method="_on_button_stop_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/ButtonKickAll" to="." method="_on_button_kick_all_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Details/Settings/AllowSlotSteal" to="." method="_on_allow_slot_steal_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Details/Settings/AllowAllStart" to="." method="_on_allow_all_start_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Details/Public/ButtonsRow2/ButtonPollIp" to="." method="_on_button_poll_ip_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Details/Public/ButtonsRow4/IsPublicCheckBox" to="." method="_on_is_public_check_box_toggled"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/Chat/Writing/ChatMessage" to="." method="_on_chat_message_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Chat/Writing/ButtonSend" to="." method="_on_button_send_pressed"]
